<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="?attr/colorBgToolbar"
    />

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorBgToolbar"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/toolbarSecretBtnBack"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_gravity="start|center_vertical"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:paddingStart="27dp"
                android:paddingEnd="0dp"
                android:src="@drawable/ic_arrow_left"
                android:tint="@color/colorWhite"
                android:contentDescription="@string/back"/>

        <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="62dp"
                android:layout_gravity="start|center_vertical"
                android:background="@drawable/ic_visibility"
                android:scaleType="centerCrop"
                android:contentDescription="@string/secret"/>

        <TextView
                android:id="@+id/btnHideSecretChats"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="100dp"
                android:lines="1"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_regular"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:gravity="center_vertical"
                android:layout_gravity="start|center_vertical"
                android:text="@string/app_name"/>

        <ImageView
                android:layout_width="40dp"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:src="?attr/logoSecretToolbar"
                android:contentDescription="@string/logo"/>

        <ImageView
                android:id="@+id/toolbarBtnKey"
                android:layout_width="44dp"
                android:layout_height="24dp"
                android:layout_marginEnd="65dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_key"
                android:contentDescription="@string/secret"/>

        <ImageView
                android:id="@+id/toolbarBtnSearch"
                android:layout_width="64dp"
                android:layout_height="24dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/search"/>
    </FrameLayout>
</LinearLayout>