<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.locker.FingerprintLockerActivity">

    <include layout="@layout/app_toolbar_only_btn_back"/>
    
    <ImageView
            android:layout_width="80dp"
            android:layout_height="65dp"
            android:src="@drawable/ic_logo_secret_gradient"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/logo"/>

    <ImageView
            android:id="@+id/btnSetFingerprint"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_fingerprint"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/finger"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:text="@string/locker_finger_title"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="27sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="?attr/colorTextGreyDark50OrWhite"/>

</LinearLayout>