<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorBgToolbar"
        android:orientation="horizontal">

    <ImageView
            android:id="@+id/toolbarSearchBtnBack"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingStart="27dp"
            android:paddingEnd="0dp"
            android:src="@drawable/ic_arrow_left"
            android:tint="@color/colorWhite"
            android:contentDescription="@string/back"/>

    <EditText
            android:id="@+id/etSearch"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:lines="1"
            android:imeOptions="actionSearch"
            android:inputType="textShortMessage|textCapWords"
            android:textSize="20sp"
            android:layout_marginStart="27dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@drawable/cursor_color"
            android:backgroundTint="@color/colorWhite"
            android:hint="@string/search_hint"
            android:textColorHint="@color/colorWhite50"
            android:gravity="center_vertical" tools:ignore="Autofill"/>

    <ImageView
            android:id="@+id/toolbarBtnSearchUp"
            android:layout_width="64dp"
            android:layout_height="24dp"
            android:alpha="0.5"
            android:layout_gravity="end|center_vertical"
            android:tint="@color/colorWhite"
            android:rotation="90"
            android:src="@drawable/ic_arrow_left"
            android:contentDescription="@string/previous"/>

    <ImageView
            android:id="@+id/toolbarBtnSearchDown"
            android:layout_width="64dp"
            android:layout_height="24dp"
            android:alpha="0.5"
            android:layout_gravity="end|center_vertical"
            android:tint="@color/colorWhite"
            android:rotation="-90"
            android:src="@drawable/ic_arrow_left"
            android:contentDescription="@string/next"/>

</LinearLayout>